Updated Kafka connector for Flink 1.18, updated instructions how to run
- fixed issued with build
- Added Jackson explicitly to CP